--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>VFF Extension basic example</title>
 
-    <script src="https://rawgit.com/TwiztedDesign/vff/master/dist/vff.js"></script>
+    <script src="https://unpkg.com/vff@1"></script>
     <script src="../../dist/vff-ext.js"></script>
 
 </head>
